--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@codewars/test-compat": "^1.1.0",
     "chai": "^4.3.7"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.5"
   }
 }
