--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.5",
     "@types/jest": "^29.5.3",
-    "@types/mocha": "^10.0.1"
+    "@types/mocha": "^10.0.1",
+    "@types/testing-library__jest-dom": "^5.14.9"
   }
 }
