--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "type": "module",
+
   "dependencies": {
     "@codewars/test-compat": "^1.1.0",
     "chai": "^4.3.7"
@@ -15,4 +17,5 @@
     "jest": "^29.6.2",
     "prettier": "^3.0.1"
   }
+  
 }
