--- a/React/client/package.json
+++ b/React/client/package.json
@@ -9,7 +9,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
+  },
+  "build": "GENERATE_SOURCEMAP=false react-scripts build",
+  "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+  "styles": [
+    "src/styles.css",
+    "./node_modules/bootstrap/dist/css/bootstrap.css"
+  ],
+  "resolutions": {
+    "workbox-webpack-plugin": "6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11"
   }
 }
