--- a/React/package.json
+++ b/React/package.json
@@ -5,6 +5,7 @@
     "babel-register": "^6.26.0",
     "express": "^4.18.2",
     "express-jsx": "^0.0.4",
+    "parse5": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
