--- a/Java/.vscode/settings.json
+++ b/Java/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "java.project.outputPath": "bin",
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src\\000002",
+        "src"
+    ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
-    ]
+    ],
+    "java.dependency.packagePresentation": "hierarchical",
+    "java.debug.settings.onBuildFailureProceed": true
 }
